# python-functions-programming-exercises

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.es.md  README.md  bc.json  learn.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: learnpack-audit.yml
exercises/00-Welcome/: README.es.md  README.md
exercises/01-Hello-World/: README.es.md  README.md  app.py  solution.hide.py
exercises/01-hello-world/: README.es.md  README.md
exercises/02-Hello-World/: README.es.md  README.md  app.py  solution.hide.py  test.py
exercises/02-What-is-a-function/: README.es.md  README.md  solution.hide.py
exercises/03-Call-a-function/: README.es.md  README.md  app.py
exercises/03-What-is-a-function/: README.es.md  README.md  app.py  tests.py
exercises/04-Call-a-function/: README.es.md  README.md  app.js  app.py  solution.hide.py  tests.js  tests.py
exercises/04-Defining-vs-Calling-a-function/: README.es.md  README.md  app.py  tests.py
exercises/05-Defining-vs-Calling-a-function/: README.es.md  README.md  app.js  app.py  solution.hide.py  tests.js  tests.py
exercises/05-lambda-functions/: README.es.md  README.md  app.py  tests.py
exercises/06-Anonymous-functions/: README.md  app.js  tests.js
exercises/06-lambda-function-two/: README.es.md  README.md  app.py  solution.hide.py
exercises/06-lambda-functions/: README.es.md  README.md  app.py  solution.hide.py  tests.py
exercises/07-Arrow-Functions/: README.md  app.js  tests.js
exercises/07-Function-that-returns/: README.es.md  README.md  solution.hide.py
exercises/07-lambda-function-two/: README.es.md  README.md  (+3 more)
tests/: conftest.py  test_infrastructure.py
(+34 files in other folders)
